# blog-vector-scrapper

./: .gitignore  PROJECT_SUMMARY.md  pyproject.toml
app/: config.py  main.py  models.py
app/database/: milvus.py  mongodb.py
app/features/: embedding.py  scraping.py  search.py
