[project]
name = "blog-scrapper-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "motor>=3.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "crawl4ai>=0.7.7",
    "pymilvus>=2.6.3",
    "milvus-lite>=2.5.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "google-generativeai>=0.8.0",
    "sentence-transformers>=3.0.1",
]
